Feature: Windows debug launcher (#2666)
Add additonal launcher to windows release to debug javafx problems.